--- a/packages/utilities/fast-react-wrapper/package.json
+++ b/packages/utilities/fast-react-wrapper/package.json
@@ -18,11 +18,10 @@
     "access": "public"
   },
   "main": "dist/esm/index.js",
-  "type": "module",
   "types": "dist/fast-react-wrapper.d.ts",
   "unpkg": "dist/fast-react-wrapper.min.js",
   "scripts": {
-    "build": "npm run clean:dist && tsc -p ./tsconfig.json && rollup -c && npm run doc",
+    "build": "npm run clean:dist && tsc -p ./tsconfig.json && rollup --bundleConfigAsCjs -c && npm run doc",
     "pack": "npm pack",
     "lint": "npm run eslint",
     "format": "npm run eslint:fix",
@@ -37,24 +36,24 @@
     "eslint:fix": "eslint . --ext .ts --fix",
     "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
-    "test-chrome": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage",
-    "test-chrome:verbose": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage --reporter=mocha",
-    "test-chrome:watch": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --coverage --watch-extensions js",
+    "test-chrome": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run",
+    "test-chrome:verbose": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --reporter=mocha",
+    "test-chrome:watch": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --watch-extensions js",
     "test-chrome:debugger": "karma start karma.conf.cjs --browsers=ChromeDebugging",
-    "test-chrome:verbose:watch": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --coverage --watch-extensions js --reporter=mocha",
+    "test-chrome:verbose:watch": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --watch-extensions js --reporter=mocha",
     "test-chrome:verbose:debugger": "karma start karma.conf.cjs --browsers=ChromeDebugging --reporter=mocha",
-    "test-firefox": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage",
-    "test-firefox:verbose": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage --reporter=mocha"
+    "test-firefox": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run",
+    "test-firefox:verbose": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --reporter=mocha"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "7.49.1",
-    "@types/chai": "^5.0.1",
+    "@types/chai": "^4",
     "@types/karma": "^6.3.9",
     "@types/mocha": "^10.0.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/webpack-env": "^1.15.2",
-    "chai": "^5.1.2",
+    "chai": "^4",
     "esm": "^3.2.25",
     "ignore-loader": "^0.1.2",
     "jsdom": "^26.0.0",
@@ -68,6 +67,7 @@
     "karma-sourcemap-loader": "^0.4.0",
     "karma-webpack": "^5.0.1",
     "mocha": "^11.0.1",
+    "playwright": "1.44.0",
     "prettier": "3.4.2",
     "react": "^18",
     "react-dom": "^18",
