--- a/packages/web-components/fast-element/package.json
+++ b/packages/web-components/fast-element/package.json
@@ -19,7 +19,6 @@
   },
   "main": "dist/esm/index.js",
   "types": "dist/fast-element.d.ts",
-  "type": "module",
   "unpkg": "dist/fast-element.min.js",
   "scripts": {
     "build": "npm run clean:dist && npm run build:tsc && npm run build:rollup && npm run doc",
@@ -29,7 +28,7 @@
     "test": "npm run test-chrome:verbose",
     "clean:dist": "rimraf dist",
     "doc": "api-extractor run --local",
-    "build:rollup": "rollup -c",
+    "build:rollup": "rollup --bundleConfigAsCjs -c",
     "build:tsc": "tsc -p ./tsconfig.json",
     "dev": "tsc -p ./tsconfig.json -w",
     "tdd": "npm run dev & npm run test-chrome:watch",
@@ -50,13 +49,13 @@
   },
   "devDependencies": {
     "@microsoft/api-extractor": "7.49.1",
-    "@types/chai": "^5.0.1",
+    "@types/chai": "^4",
     "@types/chai-spies": "^1.0.3",
     "@types/karma": "^6.3.9",
     "@types/mocha": "^10.0.10",
     "@types/webpack-env": "^1.15.2",
     "@types/web-ie11": "^0.0.3",
-    "chai": "^5.1.2",
+    "chai": "^4",
     "chai-spies": "^1.0.0",
     "esm": "^3.2.25",
     "ignore-loader": "^0.1.2",
@@ -71,6 +70,7 @@
     "karma-sourcemap-loader": "^0.4.0",
     "karma-webpack": "^5.0.1",
     "mocha": "^11.0.1",
+    "playwright": "1.44.0",
     "prettier": "3.4.2",
     "rimraf": "^6.0.1",
     "rollup": "^4.30.1",
