--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -20,7 +20,6 @@
   "main": "dist/esm/index.js",
   "types": "dist/fast-foundation.d.ts",
   "unpkg": "dist/fast-foundation.min.js",
-  "type": "module",
   "scripts": {
     "build": "npm run clean:dist && npm run build:tsc && npm run build:rollup && npm run doc",
     "pack": "npm pack",
@@ -29,7 +28,7 @@
     "test": "npm run test-chrome:verbose",
     "clean:dist": "rimraf dist",
     "doc": "api-extractor run --local",
-    "build:rollup": "rollup -c",
+    "build:rollup": "rollup --bundleConfigAsCjs -c",
     "build:tsc": "tsc -p ./tsconfig.json",
     "dev": "tsc -p ./tsconfig.json -w",
     "tdd": "npm run dev & npm run test-chrome:watch",
@@ -40,24 +39,24 @@
     "eslint:fix": "eslint . --ext .ts --fix",
     "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
-    "test-chrome": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage",
-    "test-chrome:verbose": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage --reporter=mocha",
-    "test-chrome:watch": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --coverage --watch-extensions js",
+    "test-chrome": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run",
+    "test-chrome:verbose": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --reporter=mocha",
+    "test-chrome:watch": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --watch-extensions js",
     "test-chrome:debugger": "karma start karma.conf.cjs --browsers=ChromeDebugging",
-    "test-chrome:verbose:watch": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --coverage --watch-extensions js --reporter=mocha",
+    "test-chrome:verbose:watch": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --watch-extensions js --reporter=mocha",
     "test-chrome:verbose:debugger": "karma start karma.conf.cjs --browsers=ChromeDebugging --reporter=mocha",
-    "test-firefox": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage",
-    "test-firefox:verbose": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage --reporter=mocha",
-    "test-firefox:watch": "karma start karma.conf.cjs --browsers=FirefoxHeadless   --coverage --watch-extensions js"
+    "test-firefox": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run",
+    "test-firefox:verbose": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --reporter=mocha",
+    "test-firefox:watch": "karma start karma.conf.cjs --browsers=FirefoxHeadless --watch-extensions js"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "7.49.1",
-    "@types/chai": "^5.0.1",
+    "@types/chai": "^4",
     "@types/chai-spies": "^1.0.3",
     "@types/karma": "^6.3.9",
     "@types/mocha": "^10.0.10",
     "@types/webpack-env": "^1.15.2",
-    "chai": "^5.1.2",
+    "chai": "^4",
     "chai-spies": "^1.0.0",
     "esm": "^3.2.25",
     "ignore-loader": "^0.1.2",
@@ -72,6 +71,7 @@
     "karma-sourcemap-loader": "^0.4.0",
     "karma-webpack": "^5.0.1",
     "mocha": "^11.0.1",
+    "playwright": "1.44.0",
     "prettier": "3.4.2",
     "rimraf": "^6.0.1",
     "rollup": "^4.30.1",
