--- a/packages/utilities/fast-web-utilities/package.json
+++ b/packages/utilities/fast-web-utilities/package.json
@@ -19,7 +19,6 @@
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "type": "module",
   "scripts": {
     "build": "npm run clean:dist && tsc -p ./tsconfig.build.json",
     "pack": "npm pack",
@@ -31,26 +30,26 @@
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
     "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
-    "test-chrome": "karma start karma.conf.ts --browsers=ChromeHeadlessOpt --single-run --coverage",
-    "test-chrome:verbose": "karma start karma.conf.ts --browsers=ChromeHeadlessOpt --single-run --coverage --reporter=mocha",
-    "test-chrome:watch": "karma start karma.conf.ts --browsers=ChromeHeadlessOpt --coverage --watch-extensions js",
+    "test-chrome": "karma start karma.conf.ts --browsers=ChromeHeadlessOpt --single-run",
+    "test-chrome:verbose": "karma start karma.conf.ts --browsers=ChromeHeadlessOpt --single-run --reporter=mocha",
+    "test-chrome:watch": "karma start karma.conf.ts --browsers=ChromeHeadlessOpt --watch-extensions js",
     "test-chrome:debugger": "karma start karma.conf.ts --browsers=ChromeDebugging",
-    "test-chrome:verbose:watch": "karma start karma.conf.ts --browsers=ChromeHeadlessOpt --coverage --watch-extensions js --reporter=mocha",
+    "test-chrome:verbose:watch": "karma start karma.conf.ts --browsers=ChromeHeadlessOpt --watch-extensions js --reporter=mocha",
     "test-chrome:verbose:debugger": "karma start karma.conf.ts --browsers=ChromeDebugging --reporter=mocha",
-    "test-firefox": "karma start karma.conf.ts --browsers=FirefoxHeadless --single-run --coverage",
-    "test-firefox:verbose": "karma start karma.conf.ts --browsers=FirefoxHeadless --single-run --coverage --reporter=mocha",
-    "test-firefox:watch": "karma start karma.conf.ts --browsers=FirefoxHeadless   --coverage --watch-extensions js",
+    "test-firefox": "karma start karma.conf.ts --browsers=FirefoxHeadless --single-run",
+    "test-firefox:verbose": "karma start karma.conf.ts --browsers=FirefoxHeadless --single-run --reporter=mocha",
+    "test-firefox:watch": "karma start karma.conf.ts --browsers=FirefoxHeadless   --watch-extensions js",
     "eslint": "eslint . --ext .ts,.tsx",
     "eslint:fix": "eslint . --ext .ts,.tsx --fix",
     "watch": "npm run build -- -w --preserveWatchOutput"
   },
   "devDependencies": {
-    "@types/chai": "^5.0.1",
+    "@types/chai": "^4",
     "@types/chai-spies": "^1.0.3",
     "@types/karma": "^6.3.9",
     "@types/mocha": "^10.0.10",
     "@ni/eslint-config-fast-dna": "^1.0.0",
-    "chai": "^5.1.2",
+    "chai": "^4",
     "chai-spies": "^1.0.0",
     "eslint-config-prettier": "^10.0.1",
     "jsdom": "^26.0.0",
@@ -64,6 +63,7 @@
     "karma-sourcemap-loader": "^0.4.0",
     "karma-webpack": "^5.0.1",
     "mocha": "^11.0.1",
+    "playwright": "1.44.0",
     "prettier": "3.4.2",
     "rimraf": "^6.0.1",
     "ts-loader": "^9.5.2",
