--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,31 +5,4 @@
 # The last matching pattern has the most precendence.
 
 # These *code owners* will be the default owners for everything in the repository.
-* @chrisdholt @janechu @nicholasrice @radium-v
-
-# File type specific owners
-# Markdown specific files
-*.md @awentzel @chrisdholt @falkicon
-/docs/ @awentzel @chrisdholt @falkicon
-
-# GitHub management
-.github/ @awentzel @janechu @chrisdholt @nicholasrice
-.github/workflows/ @awentzel @chrisdholt @nicholasrice
-
-# Build scripts
-*.yml @awentzel @janechu @nicholasrice @chrisdholt
-build/ @janechu @nicholasrice @chrisdholt @awentzel
-
-# Specifications
-/specs/ @chrisdholt @janechu @nicholasrice
-
-# Sites
-/sites/website/ @awentzel @chrisdholt @falkicon
-
-# Package specific owners
-
-# Web components
-/packages/web-components/fast-element/ @chrisdholt @janechu @nicholasrice
-
-# the change directory has no owners
-/change/
+* @chrisdholt @janechu @radium-v
