--- a/packages/web-components/fast-btr/package.json
+++ b/packages/web-components/fast-btr/package.json
@@ -21,18 +21,20 @@
         "clean": "tsc -b --clean src",
         "clean:dist": "node ../../../build/clean.js dist",
         "build": "tsc -b src && npm run doc",
+        "build-app": "webpack",
+        "build-server": "tsc -b server",
         "doc": "api-extractor run --local",
         "doc:ci": "api-extractor run",
-        "prepublishOnly": "npm run clean && npm run build",
-        "build-server": "tsc -b server",
         "eslint": "eslint . --ext .ts",
         "eslint:fix": "eslint . --ext .ts --fix",
+        "prepublishOnly": "npm run clean && npm run build",
         "pretest": "npm run build-server && npm run build",
         "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.{ts,html}\" --list-different",
         "prettier": "prettier --config ../../../.prettierrc --write \"**/*.{ts,html}\"",
-        "test": "playwright test --config=playwright.config.cjs",
+        "test": "npm run build-app && playwright test --config=playwright.config.cjs",
         "test-server": "node server/dist/server.js",
-        "install-playwright-browsers": "npm run playwright install"
+        "install-playwright-browsers": "npm run playwright install",
+        "dev": "npm run build && npm run build-app && npm run build-server && npm run test-server"
     },
     "description": "A package for facilitating rendering FAST Web Components in a non-browser environment.",
     "exports": {
@@ -42,6 +44,9 @@
         },
         "./package.json": "./package.json"
     },
+    "sideEffects": [
+        "./dist/esm/index.js"
+    ],
     "peerDependencies": {
         "@microsoft/fast-element": "^2.0.1"
     },
@@ -52,7 +57,9 @@
         "@types/express": "^4.17.21",
         "@types/node": "^17.0.17",
         "express": "^4.19.2",
-        "typescript": "~5.3.0"
+        "typescript": "~5.3.0",
+        "webpack": "^5.97.1",
+        "webpack-cli": "^6.0.1"
     },
     "beachball": {
         "disallowedChangeTypes": [
