--- a/.github/workflows/cd-release-npm.yml
+++ b/.github/workflows/cd-release-npm.yml
@@ -2,8 +2,8 @@ name: Release NPM Packages
 
 on:
   workflow_dispatch:
-  # schedule:
-  #   - cron: '0 7 * * 0-4'
+  schedule:
+    - cron: '0 0 * * 1'
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
