--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "build:gh-pages": "npm run build -w fast-site",
     "publish": "beachball publish",
     "publish-ci": "beachball publish -y --access public",
+    "sync": "beachball sync",
     "test:diff:error": "echo \"Untracked files exist, try running npm prepare to identify the culprit.\" && exit 1",
     "test:diff": "git update-index --refresh && git diff-index --quiet HEAD -- || npm run test:diff:error",
     "test:validation": "npm run test:diff",
@@ -63,7 +64,7 @@
     "@types/node": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "beachball": "^2.31.2",
+    "beachball": "^2.51.0",
     "chalk": "^2.4.2",
     "copyfiles": "^2.4.1",
     "dotenv": "^6.0.0",
