Add attribute and attribute bindings

--- a/packages/web-components/fast-btr/package.json
+++ b/packages/web-components/fast-btr/package.json
@@ -21,8 +21,9 @@
         "clean": "tsc -b --clean src",
         "clean:dist": "node ../../../build/clean.js dist",
         "build": "tsc -b src && npm run doc",
+        "build:attribute": "webpack --config ./src/fixtures/attribute/webpack.config.js",
         "build:binding": "webpack --config ./src/fixtures/binding/webpack.config.js",
-        "build-app": "npm run build:binding",
+        "build-app": "npm run build:attribute && npm run build:binding",
         "build-server": "tsc -b server",
         "doc": "api-extractor run --local",
         "doc:ci": "api-extractor run",
