Add the when directive and directive parsing logic

--- a/packages/web-components/fast-btr/package.json
+++ b/packages/web-components/fast-btr/package.json
@@ -23,14 +23,15 @@
         "build": "tsc -b src && npm run doc",
         "build:attribute": "webpack --config ./src/fixtures/attribute/webpack.config.js",
         "build:binding": "webpack --config ./src/fixtures/binding/webpack.config.js",
-        "build-app": "npm run build:attribute && npm run build:binding",
+        "build:when": "webpack --config ./src/fixtures/when/webpack.config.js",
+        "build-app": "npm run build:attribute && npm run build:binding && npm run build:when",
         "build-server": "tsc -b server",
         "doc": "api-extractor run --local",
         "doc:ci": "api-extractor run",
         "eslint": "eslint . --ext .ts",
         "eslint:fix": "eslint . --ext .ts --fix",
         "prepublishOnly": "npm run clean && npm run build",
-        "pretest": "npm run build-server && npm run build",
+        "pretest": "npm run build && npm run build-server",
         "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.{ts,html}\" --list-different",
         "prettier": "prettier --config ../../../.prettierrc --write \"**/*.{ts,html}\"",
         "test": "npm run build-app && playwright test --config=playwright.config.cjs",
