--- a/packages/web-components/fast-html/package.json
+++ b/packages/web-components/fast-html/package.json
@@ -24,7 +24,8 @@
         "build:attribute": "webpack --config ./src/fixtures/attribute/webpack.config.js",
         "build:binding": "webpack --config ./src/fixtures/binding/webpack.config.js",
         "build:when": "webpack --config ./src/fixtures/when/webpack.config.js",
-        "build-app": "npm run build:attribute && npm run build:binding && npm run build:when",
+        "build:repeat": "webpack --config ./src/fixtures/repeat/webpack.config.js",
+        "build-app": "npm run build:attribute && npm run build:binding && npm run build:when && npm run build:repeat",
         "build-server": "tsc -b server",
         "doc": "api-extractor run --local",
         "doc:ci": "api-extractor run",
