Add slotted attribute directive

--- a/packages/web-components/fast-html/package.json
+++ b/packages/web-components/fast-html/package.json
@@ -27,7 +27,8 @@
         "build:children": "webpack --config ./src/fixtures/children/webpack.config.js",
         "build:when": "webpack --config ./src/fixtures/when/webpack.config.js",
         "build:repeat": "webpack --config ./src/fixtures/repeat/webpack.config.js",
-        "build-app": "npm run build:attribute && npm run build:event && npm run build:children && npm run build:binding && npm run build:when && npm run build:repeat",
+        "build:slotted": "webpack --config ./src/fixtures/slotted/webpack.config.js",
+        "build-app": "npm run build:attribute && npm run build:event && npm run build:children && npm run build:binding && npm run build:when && npm run build:repeat && npm run build:slotted",
         "build-server": "tsc -b server",
         "doc": "api-extractor run --local",
         "doc:ci": "api-extractor run",
