Dependency Update April 2025 (#12)
# Pull Request

## 📖 Description

- Updates dependencies to latest by rebuild lock
- Unpins and updates playwright to latest version with corresponding
ubuntu update
- Remaining packages not updated align with
https://github.com/ni/fast/pull/2

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@types/node": "^22",
     "beachball": "^2.24.0",
     "cross-env": "^7.0.3",
-    "playwright": "1.44.0",
+    "playwright": "^1.51.1",
     "prettier": "3.4.2",
     "typescript": "~5.4.5"
   }
