--- a/packages/utilities/fast-react-wrapper/package.json
+++ b/packages/utilities/fast-react-wrapper/package.json
@@ -67,7 +67,7 @@
     "karma-sourcemap-loader": "^0.4.0",
     "karma-webpack": "^5.0.1",
     "mocha": "^11.0.1",
-    "playwright": "1.44.0",
+    "playwright": "^1.51.1",
     "prettier": "3.4.2",
     "react": "^18",
     "react-dom": "^18",
