--- a/packages/utilities/fast-web-utilities/package.json
+++ b/packages/utilities/fast-web-utilities/package.json
@@ -62,7 +62,7 @@
     "karma-sourcemap-loader": "^0.4.0",
     "karma-webpack": "^5.0.1",
     "mocha": "^11.0.1",
-    "playwright": "1.44.0",
+    "playwright": "^1.51.1",
     "prettier": "3.4.2",
     "rimraf": "^6.0.1",
     "ts-loader": "^9.5.2",
