--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -26,8 +26,8 @@
     "@microsoft/fast-element": "^2.6.0",
     "@microsoft/fast-foundation": "^3.0.0-alpha.33",
     "@microsoft/fast-ssr": "^1.0.0-beta.35",
+    "@microsoft/fast-todo-app-example": "1.0.0",
     "express": "^4.19.2",
-    "fast-todo-app": "1.0.0",
     "ts-loader": "^9.3.0",
     "tslib": "^2.6.3",
     "typescript": "~4.7.0",
