--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
-    "@octokit/rest": "^18.0.6",
+    "@octokit/rest": "^22.0.0",
     "@types/lodash-es": "^4.17.4",
     "@types/node": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -81,5 +81,8 @@
     "ts-node": "^8.8.2",
     "typescript": "~4.7.0",
     "yargs": "^16.2.0"
+  },
+  "overrides": {
+    "webpack-dev-server": "^5.2.2"
   }
 }
