[feat]: add lifecycle callbacks for hydration and template events (#7199)
* add requestIdleCallback ponyfill

* [feat]: add lifecycle callbacks for hydration and template events

* [chore]: provide useful details in HydrationView error message

* [feat]: implement lifecycle callbacks for hydration and template events

* update api docs

* Change files

* rewrite outdated test

* [chore]: update test command in package.json and add playwright configuration

* add documentation

* update api report

--- a/packages/web-components/fast-html/package.json
+++ b/packages/web-components/fast-html/package.json
@@ -34,7 +34,8 @@
     "build:repeat": "webpack --config ./src/fixtures/repeat/webpack.config.js",
     "build:observer-map": "webpack --config ./src/fixtures/observer-map/webpack.config.js",
     "build:slotted": "webpack --config ./src/fixtures/slotted/webpack.config.js",
-    "build-app": "npm run build:attribute && npm run build:dot-syntax && npm run build:event && npm run build:children && npm run build:binding && npm run build:when && npm run build:ref && npm run build:repeat && npm run build:observer-map && npm run build:slotted",
+    "build:lifecycle-callbacks": "webpack --config ./src/fixtures/lifecycle-callbacks/webpack.config.js",
+    "build-app": "npm run build:attribute && npm run build:dot-syntax && npm run build:event && npm run build:children && npm run build:binding && npm run build:when && npm run build:ref && npm run build:repeat && npm run build:observer-map && npm run build:slotted && npm run build:lifecycle-callbacks",
     "build-server": "tsc -b server",
     "doc": "api-extractor run --local",
     "doc:ci": "api-extractor run",
@@ -44,7 +45,7 @@
     "pretest": "npm run build && npm run build-server",
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.{ts,html}\" --list-different",
     "prettier": "prettier --config ../../../.prettierrc --write \"**/*.{ts,html}\"",
-    "test": "npm run build-app && playwright test --config=playwright.config.cjs && npm run test:rules",
+    "test": "npm run build-app && playwright test && npm run test:rules",
     "test-server": "node server/dist/server.js",
     "test:rules": "sg test --skip-snapshot-tests",
     "install-playwright-browsers": "npm run playwright install",
