Add .snyk exclusions file (#24)
# Pull Request

## 📖 Description

Add base .snyk file.

### 🎫 Issues

N/A

## 👩‍💻 Reviewer Notes

.snyk SAST file.

## 📑 Test Plan

N/A

## ✅ Checklist

### General

~~- [ ] I have included a change request file using `$ yarn change`~~
~~- [ ] I have added tests for my changes.~~
~~- [ ] I have tested my changes.~~
~~- [ ] I have updated the project documentation to reflect my
changes.~~
- [X] I have read the
[CONTRIBUTING](https://github.com/microsoft/fast/blob/master/CONTRIBUTING.md)
documentation and followed the
[standards](/docs/community/code-of-conduct/#our-standards) for this
project.

## ⏭ Next Steps

N/A

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,3 +12,5 @@
 
 # Change files don't need explicit reviewers
 /change
+
+/.snyk @chris468 @cameronwaterman @BKnight760 @rbell517 @jattasNI @prestwick
