chore: add nightly cron

--- a/.github/workflows/cd-release-npm.yml
+++ b/.github/workflows/cd-release-npm.yml
@@ -3,7 +3,7 @@ name: Release NPM Packages
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * 1'
+    - cron: '0 7 * * 0-4'
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
