--- a/packages/fast-router/package.json
+++ b/packages/fast-router/package.json
@@ -12,7 +12,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Microsoft/fast.git",
-    "directory": "packages/web-components/fast-router"
+    "directory": "packages/fast-router"
   },
   "bugs": {
     "url": "https://github.com/Microsoft/fast/issues/new/choose"
