override glob and js-yaml dependencies

--- a/package.json
+++ b/package.json
@@ -71,18 +71,20 @@
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.25.0",
-    "glob": "^10.0.0",
+    "glob": "^12.0.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.1.2",
     "markdown-it": "^12.3.2",
     "prettier": "2.8.8",
-    "rimraf": "^5.0.0",
+    "rimraf": "^6.1.0",
     "ts-node": "^8.8.2",
     "typescript": "~4.7.0",
     "vite": "^7.1.12",
     "yargs": "^16.2.0"
   },
   "overrides": {
+    "js-yaml": "4.1.1",
+    "glob": "^12.0.0",
     "webpack-dev-server": "^5.2.2",
     "@microsoft/fast-foundation": {
       "@microsoft/fast-element": "file:./packages/fast-element"
