--- a/package.json
+++ b/package.json
@@ -66,17 +66,16 @@
     "beachball": "^2.51.0",
     "chalk": "^2.4.2",
     "concurrently": "^9.2.1",
-    "copyfiles": "^2.4.1",
     "dotenv": "^6.0.0",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.25.0",
-    "glob": "^10.0.0",
+    "glob": "^10.5.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.1.2",
     "markdown-it": "^12.3.2",
     "prettier": "2.8.8",
-    "rimraf": "^5.0.0",
+    "rimraf": "^6.1.0",
     "ts-node": "^8.8.2",
     "typescript": "~4.7.0",
     "vite": "^7.1.12",
@@ -84,6 +83,12 @@
   },
   "overrides": {
     "webpack-dev-server": "^5.2.2",
+    "sucrase": {
+      "glob": "$glob"
+    },
+    "read-package-json": {
+      "glob": "$glob"
+    },
     "@microsoft/fast-foundation": {
       "@microsoft/fast-element": "file:./packages/fast-element"
     }
