fix: updates relative paths missed during the repository structure update

--- a/packages/fast-html/package.json
+++ b/packages/fast-html/package.json
@@ -32,8 +32,8 @@
     "eslint": "eslint . --ext .ts",
     "install-playwright-browsers": "npm run playwright install",
     "prepublishOnly": "npm run clean && npm run build",
-    "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.{ts,html}\" --list-different",
-    "prettier": "prettier --config ../../../.prettierrc --write \"**/*.{ts,html}\"",
+    "prettier:diff": "prettier --config ../../.prettierrc \"**/*.{ts,html}\" --list-different",
+    "prettier": "prettier --config ../../.prettierrc --write \"**/*.{ts,html}\"",
     "test-server": "npx vite test/ --clearScreen false",
     "test:playwright": "playwright test",
     "test:rules": "sg test --skip-snapshot-tests",
