--- a/packages/fast-router/package.json
+++ b/packages/fast-router/package.json
@@ -22,15 +22,15 @@
   "type": "module",
   "unpkg": "dist/fast-router.min.js",
   "scripts": {
-    "clean:dist": "node ../../../build/clean.js dist",
+    "clean:dist": "node ../../build/clean.js dist",
     "doc": "api-extractor run --local",
     "doc:ci": "api-extractor run",
     "build": "tsc -p ./tsconfig.json && npm run doc",
     "dev": "tsc -p ./tsconfig.json -w",
     "tdd": "npm run dev & npm run test-chrome:watch",
     "prepublishOnly": "npm run clean:dist && npm run build",
-    "prettier": "prettier --config ../../../.prettierrc --write \"**/*.ts\"",
-    "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
+    "prettier": "prettier --config ../../.prettierrc --write \"**/*.ts\"",
+    "prettier:diff": "prettier --config ../../.prettierrc \"**/*.ts\" --list-different",
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
     "test": "npm run eslint && npm run test-chrome:verbose && npm run doc:ci",
