--- a/packages/fast-element/package.json
+++ b/packages/fast-element/package.json
@@ -102,7 +102,7 @@
   ],
   "scripts": {
     "benchmark": "npm run clean:dist && npm run build && node ./scripts/run-benchmarks",
-    "clean:dist": "node ../../../build/clean.js dist",
+    "clean:dist": "node ../../build/clean.js dist",
     "doc": "api-extractor run --local",
     "doc:ci": "api-extractor run",
     "doc:exports": "node ./scripts/run-api-extractor.js",
@@ -113,8 +113,8 @@
     "dev": "tsc -p ./tsconfig.json -w",
     "tdd": "npm run dev & npm run test-chrome:watch",
     "prepublishOnly": "npm run clean:dist && npm run build",
-    "prettier": "prettier --config ../../../.prettierrc --write \"**/*.ts\"",
-    "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
+    "prettier": "prettier --config ../../.prettierrc --write \"**/*.ts\"",
+    "prettier:diff": "prettier --config ../../.prettierrc \"**/*.ts\" --list-different",
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
     "test": "npm run eslint && npm run test-chrome:verbose && npm run doc:ci && npm run doc:exports:ci",
