--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "@playwright/test": "1.56.1",
     "@types/node": "^22.12.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/parser": "5.62.0",
     "beachball": "^2.51.0",
     "chalk": "^2.4.2",
     "concurrently": "^9.2.1",
