--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "beachball": "2.51.0",
-    "concurrently": "^9.2.1",
+    "concurrently": "9.2.1",
     "dotenv": "^6.0.0",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.1.0",
