--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "@typescript-eslint/parser": "5.62.0",
     "beachball": "2.51.0",
     "concurrently": "9.2.1",
-    "eslint": "^8.0.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.25.0",
     "glob": "^10.5.0",
