--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "concurrently": "9.2.1",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "^2.25.0",
+    "eslint-plugin-import": "2.29.1",
     "glob": "^10.5.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.1.2",
