--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
     "glob": "10.5.0",
-    "husky": "^4.2.5",
+    "husky": "4.3.8",
     "lint-staged": "^10.1.2",
     "markdown-it": "^12.3.2",
     "prettier": "2.8.8",
