--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "eslint-plugin-import": "2.29.1",
     "glob": "10.5.0",
     "husky": "4.3.8",
-    "lint-staged": "^10.1.2",
+    "lint-staged": "10.5.4",
     "markdown-it": "^12.3.2",
     "prettier": "2.8.8",
     "rimraf": "^6.1.0",
