--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "rimraf": "6.1.0",
     "typescript": "~4.7.0",
     "vite": "7.1.12",
-    "yargs": "^16.2.0"
+    "yargs": "17.7.2"
   },
   "overrides": {
     "webpack-dev-server": "^5.2.2",
