--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@jsdevtools/coverage-istanbul-loader": "3.0.5",
+    "@rollup/plugin-node-resolve": "15.2.3",
     "@microsoft/api-extractor": "7.47.0",
     "@octokit/rest": "22.0.0",
     "@playwright/test": "1.56.1",
