--- a/package.json
+++ b/package.json
@@ -56,10 +56,11 @@
   },
   "devDependencies": {
     "@jsdevtools/coverage-istanbul-loader": "3.0.5",
-    "@rollup/plugin-node-resolve": "15.2.3",
     "@microsoft/api-extractor": "7.47.0",
     "@octokit/rest": "22.0.0",
     "@playwright/test": "1.56.1",
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/plugin-terser": "0.4.4",
     "@types/node": "^22.12.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
