--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@playwright/test": "1.56.1",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@rollup/plugin-terser": "0.4.4",
+    "@rollup/plugin-typescript": "8.5.0",
     "@types/node": "^22.12.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
