--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@rollup/plugin-node-resolve": "15.2.3",
     "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "8.5.0",
+    "@tensile-perf/web-components": "0.2.3",
     "@types/node": "^22.12.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
