hoist type packages

--- a/package.json
+++ b/package.json
@@ -64,6 +64,11 @@
     "@rollup/plugin-typescript": "8.5.0",
     "@tensile-perf/web-components": "0.2.3",
     "@types/node": "^22.12.0",
+    "@types/chai": "^4.2.11",
+    "@types/chai-spies": "^1.0.3",
+    "@types/karma": "^6.3.3",
+    "@types/mocha": "^7.0.2",
+    "@types/webpack-env": "^1.18.5",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "beachball": "2.51.0",
