--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "beachball": "2.51.0",
+    "chai": "4.4.1",
     "concurrently": "9.2.1",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
