--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@typescript-eslint/parser": "5.62.0",
     "beachball": "2.51.0",
     "chai": "4.4.1",
+    "chai-spies": "1.1.0",
     "concurrently": "9.2.1",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
