--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
+    "esm": "3.2.25",
     "glob": "10.5.0",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
