--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "esm": "3.2.25",
     "glob": "10.5.0",
     "husky": "4.3.8",
+    "ignore-loader": "0.1.2",
     "lint-staged": "10.5.4",
     "markdown-it": "12.3.2",
     "prettier": "2.8.8",
