--- a/package.json
+++ b/package.json
@@ -83,6 +83,8 @@
     "husky": "4.3.8",
     "ignore-loader": "0.1.2",
     "istanbul": "0.4.5",
+    "jsdom": "16.7.0",
+    "jsdom-global": "3.0.2",
     "lint-staged": "10.5.4",
     "markdown-it": "12.3.2",
     "prettier": "2.8.8",
