--- a/package.json
+++ b/package.json
@@ -85,6 +85,16 @@
     "istanbul": "0.4.5",
     "jsdom": "16.7.0",
     "jsdom-global": "3.0.2",
+    "karma": "6.4.3",
+    "karma-chrome-launcher": "3.2.0",
+    "karma-coverage": "2.2.1",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-firefox-launcher": "2.1.3",
+    "karma-mocha": "2.0.1",
+    "karma-mocha-reporter": "2.2.5",
+    "karma-source-map-support": "1.4.0",
+    "karma-sourcemap-loader": "0.4.0",
+    "karma-webpack": "5.0.1",
     "lint-staged": "10.5.4",
     "markdown-it": "12.3.2",
     "prettier": "2.8.8",
