hoist typescript and lock to version 5.3.3

--- a/examples/ssr/tsconfig.json
+++ b/examples/ssr/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2015",
     "module": "ES2015",
-    "moduleResolution": "Node16",
+    "moduleResolution": "bundler",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "noEmitOnError": true,
