--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -30,7 +30,7 @@
     "express": "^4.19.2",
     "ts-loader": "^9.3.0",
     "tslib": "^2.6.3",
-    "typescript": "~4.7.0",
+    "typescript": "5.3.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.2.2",
     "webpack": "^5.92.1"
