--- a/examples/todo-app/package.json
+++ b/examples/todo-app/package.json
@@ -31,7 +31,7 @@
     "@genesiscommunitysuccess/custom-elements-lsp": "^5.0.3",
     "@types/node": "^20.12.8",
     "ts-loader": "^9.3.0",
-    "typescript": "~4.7.0",
+    "typescript": "5.3.3",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.2.2"
