--- a/packages/fast-element/package.json
+++ b/packages/fast-element/package.json
@@ -137,7 +137,6 @@
     "ts-loader": "^9.3.0",
     "ts-node": "^8.9.1",
     "tsconfig-paths": "^3.9.0",
-    "tslib": "^2.6.3",
-    "typescript": "~4.7.0"
+    "tslib": "^2.6.3"
   }
 }
