--- a/packages/fast-element/tsconfig.json
+++ b/packages/fast-element/tsconfig.json
@@ -10,7 +10,7 @@
         "strictPropertyInitialization": false,
         "target": "es2015",
         "module": "ESNext",
-        "moduleResolution": "NodeNext",
+        "moduleResolution": "bundler",
         "types": [
             "mocha",
             "webpack-env"
@@ -21,5 +21,5 @@
             "ES2016.Array.Include"
         ]
     },
-    "include": ["src"]
+    "include": [ "src" ]
 }
