--- a/packages/fast-html/package.json
+++ b/packages/fast-html/package.json
@@ -64,8 +64,7 @@
     "@ast-grep/cli": "^0.37.0",
     "@microsoft/fast-element": "^2.9.1",
     "@types/express": "^4.17.21",
-    "@types/node": "^17.0.17",
-    "typescript": "~5.3.0"
+    "@types/node": "^17.0.17"
   },
   "beachball": {
     "disallowedChangeTypes": [
