--- a/packages/fast-ssr/package.json
+++ b/packages/fast-ssr/package.json
@@ -63,8 +63,7 @@
     "@microsoft/fast-foundation": "^3.0.0-alpha.33",
     "@types/express": "^4.17.21",
     "@types/node": "^17.0.17",
-    "express": "^4.19.2",
-    "typescript": "~5.3.0"
+    "express": "^4.19.2"
   },
   "beachball": {
     "disallowedChangeTypes": [
