--- a/sites/website/package.json
+++ b/sites/website/package.json
@@ -41,7 +41,6 @@
     "concurrently": "^8.0.0",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "typescript": "~4.7.0"
+    "react-dom": "^18.3.1"
   }
 }
