--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "rollup": "2.79.2",
     "rollup-plugin-filesize": "10.0.0",
     "source-map": "0.7.4",
+    "source-map-loader": "5.0.0",
     "typescript": "5.3.3",
     "vite": "7.1.12",
     "yargs": "17.7.2"
