--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "typescript": "5.3.3",
     "vite": "7.1.12",
     "webpack": "5.97.1",
+    "webpack-cli": "5.1.4",
     "yargs": "17.7.2"
   },
   "overrides": {
