--- a/packages/fast-router/package.json
+++ b/packages/fast-router/package.json
@@ -49,8 +49,7 @@
     "@microsoft/fast-element": "^2.9.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^3.9.0",
-    "tslib": "^2.6.3",
-    "webpack-cli": "^5.1.4"
+    "tslib": "^2.6.3"
   },
   "peerDependencies": {
     "@microsoft/fast-element": "^2.9.1"
