--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/chai-spies": "^1.0.3",
     "@types/karma": "^6.3.3",
     "@types/mocha": "^7.0.2",
+    "@types/express": "^4.17.21",
     "@types/webpack-env": "^1.18.5",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
@@ -79,6 +80,7 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
     "esm": "3.2.25",
+    "express": "4.21.2",
     "glob": "10.5.0",
     "husky": "4.3.8",
     "ignore-loader": "0.1.2",
