--- a/packages/fast-ssr/package.json
+++ b/packages/fast-ssr/package.json
@@ -60,10 +60,7 @@
   },
   "devDependencies": {
     "@microsoft/fast-element": "^2.9.1",
-    "@microsoft/fast-foundation": "^3.0.0-alpha.33",
-    "@types/express": "^4.17.21",
-    "@types/node": "^17.0.17",
-    "express": "^4.19.2"
+    "@microsoft/fast-foundation": "^3.0.0-alpha.33"
   },
   "beachball": {
     "disallowedChangeTypes": [
