--- a/packages/fast-html/package.json
+++ b/packages/fast-html/package.json
@@ -61,9 +61,7 @@
     "@microsoft/fast-element": "^2.9.1"
   },
   "devDependencies": {
-    "@microsoft/fast-element": "^2.9.1",
-    "@types/express": "^4.17.21",
-    "@types/node": "^17.0.17"
+    "@microsoft/fast-element": "^2.9.1"
   },
   "beachball": {
     "disallowedChangeTypes": [
