--- a/sites/website/package.json
+++ b/sites/website/package.json
@@ -38,7 +38,7 @@
     "@mdx-js/react": "^3.0.1",
     "@microsoft/api-documenter": "^7.28.0",
     "@types/react": "^18.3.1",
-    "prism-react-renderer": "^2.3.1",
+    "prism-react-renderer": "2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
