--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -26,13 +26,6 @@
     "@microsoft/fast-element": "^2.9.1",
     "@microsoft/fast-foundation": "^3.0.0-alpha.33",
     "@microsoft/fast-ssr": "^1.0.0-beta.36",
-    "@microsoft/fast-todo-app-example": "1.0.0",
-    "express": "^4.19.2",
-    "ts-loader": "^9.3.0",
-    "tslib": "^2.6.3",
-    "typescript": "5.3.3",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.2.2",
-    "webpack": "^5.92.1"
+    "@microsoft/fast-todo-app-example": "1.0.0"
   }
 }
