remove unnecessary devDependencies from todo-app package.json and lock dev dependency versions

--- a/examples/todo-app/package.json
+++ b/examples/todo-app/package.json
@@ -27,13 +27,7 @@
     "tslib": "^2.6.3"
   },
   "devDependencies": {
-    "@genesiscommunitysuccess/cep-fast-plugin": "^5.0.3",
-    "@genesiscommunitysuccess/custom-elements-lsp": "^5.0.3",
-    "@types/node": "^20.12.8",
-    "ts-loader": "^9.3.0",
-    "typescript": "5.3.3",
-    "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.2.2"
+    "@genesiscommunitysuccess/cep-fast-plugin": "5.0.3",
+    "@genesiscommunitysuccess/custom-elements-lsp": "5.0.3"
   }
 }
