--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "vite": "7.1.12",
     "webpack": "5.97.1",
     "webpack-cli": "5.1.4",
+    "webpack-dev-server": "5.2.2",
     "yargs": "17.7.2"
   },
   "overrides": {
