fix: add missing types configuration in tsconfig.json

--- a/examples/todo-app/tsconfig.json
+++ b/examples/todo-app/tsconfig.json
@@ -27,6 +27,9 @@
     "strict": true,
     "outDir": "dist",
     "rootDir": "src",
+    "types": [
+      "webpack-env"
+    ],
     "lib": [
       "dom",
       "esnext"
