--- a/package.json
+++ b/package.json
@@ -85,13 +85,11 @@
     "glob": "10.5.0",
     "husky": "4.3.8",
     "ignore-loader": "0.1.2",
-    "istanbul": "0.4.5",
     "jsdom": "16.7.0",
     "jsdom-global": "3.0.2",
     "karma": "6.4.3",
     "karma-chrome-launcher": "3.2.0",
     "karma-coverage": "2.2.1",
-    "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-firefox-launcher": "2.1.3",
     "karma-mocha": "2.0.1",
     "karma-mocha-reporter": "2.2.5",
@@ -101,6 +99,7 @@
     "lint-staged": "10.5.4",
     "markdown-it": "12.3.2",
     "mocha": "10.8.2",
+    "nyc": "17.1.0",
     "prettier": "2.8.8",
     "rimraf": "6.1.0",
     "rollup": "2.79.2",
